--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,33 @@
 astroid==1.6.3
 autopep8==1.3.5
+coverage==4.5.1
 Django==1.11
 django-autoslug==1.9.3
 django-betterforms==1.2
 django-crispy-forms==1.7.2
+django-debug-toolbar==1.10.1
+django-fake-model==0.1.4
+django-fileprovider==0.1.4
 django-multiupload==0.5.2
+django-unused-media==0.1.12
 easy-thumbnails==2.5
+factory-boy==2.11.1
+Faker==0.9.1
 isort==4.3.4
 lazy-object-proxy==1.3.1
 mccabe==0.6.1
 mysqlclient==1.3.12
+nodeenv==1.3.2
 Pillow==5.0.0
 pycodestyle==2.4.0
 pylint==1.9.1
 pylint-django==0.11.1
 pylint-plugin-utils==0.2.6
+python-dateutil==2.7.3
+python-magic==0.4.15
 pytz==2018.4
 rope==0.10.7
 six==1.11.0
+sqlparse==0.2.4
+text-unidecode==1.2
 wrapt==1.10.11
