comments app unit tests finished

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,15 @@
 .vscode/
-manage.py
-*.pyc
-__init__.py
-/static/
-media/*
+
+__pycache__/
+
+/media/*
+!media/.gitkeep
+
 node_modules/
 package-lock.json
+
 htmlcov/ 
 .coverage
 .coveragerc
+
+functional_tests/
