--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,116 @@
-astroid==1.6.3
+alabaster==0.7.12
+amqp==2.4.2
+appnope==0.1.0
+argon2-cffi==19.1.0
+astroid==2.2.5
+atomicwrites==1.3.0
+attrs==19.1.0
 autopep8==1.3.5
-coverage==4.5.1
+Babel==2.6.0
+backcall==0.1.0
+billiard==3.5.0.5
+celery==4.2.1
+certifi==2018.11.29
+cffi==1.12.2
+chardet==3.0.4
+coreapi==2.3.3
+coreschema==0.0.4
+coverage==4.5.2
+decorator==4.4.0
+defusedxml==0.5.0
 Django==1.11
+django-allauth==0.38.0
+django-appconf==1.0.3
 django-autoslug==1.9.3
 django-betterforms==1.2
+django-compressor==2.2
+django-coverage-plugin==1.6.0
 django-crispy-forms==1.7.2
-django-debug-toolbar==1.10.1
+django-debug-toolbar==1.11
+django-environ==0.4.5
+django-extensions==2.1.5
 django-fake-model==0.1.4
 django-fileprovider==0.1.4
+django-model-utils==3.1.2
+django-modeltranslation==0.13
 django-multiupload==0.5.2
+django-redis==4.10.0
+django-rest-framework==0.1.0
+django-rosetta==0.9.1
 django-unused-media==0.1.12
+djangorestframework==3.9.1
+docutils==0.14
 easy-thumbnails==2.5
+entrypoints==0.3
 factory-boy==2.11.1
 Faker==0.9.1
+flake8==3.7.5
+idna==2.8
+imagesize==1.1.0
+ipdb==0.11
+ipython==7.4.0
+ipython-genutils==0.2.0
 isort==4.3.4
+itypes==1.1.0
+jedi==0.13.3
+Jinja2==2.10
+kombu==4.4.0
 lazy-object-proxy==1.3.1
+MarkupSafe==1.1.1
 mccabe==0.6.1
-mysqlclient==1.3.12
+more-itertools==7.0.0
+mypy==0.670
+mypy-extensions==0.4.1
+mysqlclient==2.0.1
 nodeenv==1.3.2
-Pillow==5.0.0
-pycodestyle==2.4.0
-pylint==1.9.1
+oauthlib==3.0.1
+packaging==19.0
+parso==0.3.4
+pexpect==4.6.0
+pickleshare==0.7.5
+Pillow==5.4.1
+pluggy==0.9.0
+polib==1.1.0
+prompt-toolkit==2.0.9
+psycopg2-binary==2.7.7
+ptyprocess==0.6.0
+py==1.8.0
+pycodestyle==2.5.0
+pycparser==2.19
+pyflakes==2.1.1
+Pygments==2.3.1
+pylint==2.3.1
 pylint-django==0.11.1
 pylint-plugin-utils==0.2.6
+pyparsing==2.3.1
+pytest==4.2.0
+pytest-django==3.4.7
+pytest-sugar==0.9.2
 python-dateutil==2.7.3
 python-magic==0.4.15
-pytz==2018.4
+python-slugify==2.0.1
+python3-openid==3.1.0
+pytz==2018.9
+rcssmin==1.0.6
+redis==2.10.6
+requests==2.21.0
+requests-oauthlib==1.2.0
+rjsmin==1.0.12
 rope==0.11.0
 six==1.11.0
+snowballstemmer==1.2.1
+Sphinx==1.8.4
+sphinxcontrib-websupport==1.1.0
 sqlparse==0.2.4
+termcolor==1.1.0
 text-unidecode==1.2
+traitlets==4.3.2
+typed-ast==1.3.1
+Unidecode==1.0.23
+uritemplate==3.0.0
+urllib3==1.24.1
+vine==1.3.0
+wcwidth==0.1.7
+Werkzeug==0.14.1
+whitenoise==4.1.2
 wrapt==1.10.11
