--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -1,19 +1,77 @@
 version: v1.0
-name: Initial Pipeline
+name: Semaphore Python / Django Example Pipeline
 agent:
   machine:
     type: e1-standard-2
     os_image: ubuntu1804
 blocks:
-  - name: 'Block #1'
+  - name: Install Dependencies
     task:
+      prologue:
+        commands:
+          - sem-version python 3.7
+          - sudo apt-get update && sudo apt-get install -y python3-dev && sudo apt-get install default-libmysqlclient-dev
       jobs:
-        - name: 'Job #1'
+        - name: pip
           commands:
             - checkout
-  - name: Tests
+            - cache restore
+            - pip download --cache-dir .pip_cache -r requirements.txt
+            - cache store
+  - name: Run Code Analysis
+    task:
+      prologue:
+        commands:
+          - sem-version python 3.7
+          - checkout
+          - cache restore
+          - pip install -r requirements.txt --cache-dir .pip_cache
+      jobs:
+        - name: Pylint
+          commands:
+            - git ls-files | grep -v 'migrations' | grep -v 'settings.py' | grep -v 'manage.py' | grep -E '.py$' | xargs pylint -E --load-plugins=pylint_django
+  - name: Run Unit Tests
+    task:
+      prologue:
+        commands:
+          - sem-version python 3.7
+          - sem-service start mysql
+          - checkout
+          - cache restore
+          - pip install -r requirements.txt --cache-dir .pip_cache
+      jobs:
+        - name: Model Test
+          commands:
+            - python manage.py test tasks.tests.test_models
+        - name: View Test
+          commands:
+            - python manage.py test tasks.tests.test_views
+  - name: Run Browser Tests
+    task:
+      env_vars:
+        - name: DB_NAME
+          value: pydjango
+      prologue:
+        commands:
+          - sem-version python 3.7
+          - sem-service start mysql
+          - sudo apt-get install -y -qq mysql-client
+          - mysql --host=0.0.0.0 -uroot -e "create database $DB_NAME"
+          - checkout
+          - cache restore
+          - pip install -r requirements.txt --cache-dir .pip_cache
+          - nohup python manage.py runserver &
+      jobs:
+        - name: Browser Test
+          commands:
+            - python manage.py test tasks.tests.test_browser
+  - name: Run Security Tests
     task:
       jobs:
-        - name: 'Job #1'
+        - name: Deployment Checklist
           commands:
-            - python manage.py test
+            - checkout
+            - sem-version python 3.7
+            - cache restore
+            - pip install -r requirements.txt --cache-dir .pip_cache
+            - python manage.py check --deploy --fail-level ERROR
