--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -16,7 +16,7 @@ blocks:
           commands:
             - checkout
             - cache restore
-            - pip download --cache-dir .pip_cache -r requirements.txt
+            - pip download --cache-dir .pip_cache -r requirements_production.txt
             - cache store
   - name: Run Code Analysis
     task:
