--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -18,3 +18,15 @@ blocks:
             - cache restore
             - pip download --cache-dir .pip_cache -r requirements_production.txt
             - cache store
+  - name: Run Code Analysis
+    task:
+      prologue:
+        commands:
+          - sem-version python 3.7
+          - checkout
+          - cache restore
+          - pip install -r requirements_production.txt --cache-dir .pip_cache
+      jobs:
+        - name: Pylint
+          commands:
+            - git ls-files | grep -v 'migrations' | grep -v 'settings.py' | grep -v 'manage.py' | grep -E '.py$' | xargs pylint -E --load-plugins=pylint_django
