--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -25,8 +25,11 @@ blocks:
           - sem-version python 3.7
           - checkout
           - cache restore
-          - pip install -r requirements_production.txt --cache-dir .pip_cache
+          - 'pip install -r ${REQUIREMENTS_FILE} --cache-dir .pip_cache'
       jobs:
         - name: Pylint
           commands:
             - git ls-files | grep -v 'migrations' | grep -v 'settings.py' | grep -v 'manage.py' | grep -E '.py$' | xargs pylint -E --load-plugins=pylint_django
+      env_vars:
+        - name: REQUIREMENTS_FILE
+          value: requirements_production.txt
