--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -1,5 +1,5 @@
 version: v1.0
-name: Semaphore Python / Django Example Pipeline
+name: MyNews App Semaphore Pipeline
 agent:
   machine:
     type: e1-standard-2
@@ -16,20 +16,5 @@ blocks:
           commands:
             - checkout
             - cache restore
-            - pip download --cache-dir .pip_cache -r requirements_production.txt
+            - 'pip download --cache-dir .pip_cache -r ${REQUIREMENTS_FILE}'
             - cache store
-  - name: Run Code Analysis
-    task:
-      prologue:
-        commands:
-          - sem-version python 3.7
-          - checkout
-          - cache restore
-          - 'pip install -r ${REQUIREMENTS_FILE} --cache-dir .pip_cache'
-      jobs:
-        - name: Pylint
-          commands:
-            - git ls-files | grep -v 'migrations' | grep -v 'settings.py' | grep -v 'manage.py' | grep -E '.py$' | xargs pylint -E --load-plugins=pylint_django
-      env_vars:
-        - name: REQUIREMENTS_FILE
-          value: requirements_production.txt
