--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -18,6 +18,9 @@ blocks:
             - cache restore
             - 'pip download --cache-dir .pip_cache -r ${REQUIREMENTS_FILE}'
             - cache store
+      env_vars:
+        - name: REQUIREMENTS_FILE
+          value: requirements_production.txt
   - name: Run Unit Tests
     task:
       prologue:
