--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -30,6 +30,8 @@ blocks:
         commands:
           - sem-version python 3.7
           - sem-service start mysql
+          - checkout
+          - cache restore
       jobs:
         - name: Comments Test
           commands:
