--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -11,6 +11,19 @@ global_job_config:
     - name: DJANGO_SECRET_KEY
       value: 5!xnz8s(8sdyzhtq9paveh+zsis^gfe$7c%-h)5iee0e%tpurz
 blocks:
+  - name: Install Dependencies
+    task:
+      prologue:
+        commands:
+          - sem-version python 3.7
+          - sudo apt-get update && sudo apt-get install -y python3-dev && sudo apt-get install default-libmysqlclient-dev
+      jobs:
+        - name: pip
+          commands:
+            - checkout
+            - cache restore
+            - 'pip download --cache-dir .pip_cache -r ${REQUIREMENTS_FILE}'
+            - cache store
   - name: Run Unit Tests
     task:
       prologue:
@@ -19,6 +32,7 @@ blocks:
           - sem-service start mysql
           - checkout
           - cache restore
+          - 'pip install -r ${REQUIREMENTS_FILE} --cache-dir .pip_cache'
       jobs:
         - name: Comments Test
           commands:
