--- a/requirements_production.txt
+++ b/requirements_production.txt
@@ -40,6 +40,8 @@ djangorestframework==3.9.1
 docutils==0.14
 easy-thumbnails==2.5
 entrypoints==0.3
+factory-boy==2.11.1
+Faker==0.9.1
 idna==2.8
 imagesize==1.1.0
 ipdb==0.11
@@ -70,6 +72,9 @@ pycodestyle==2.5.0
 pycparser==2.19
 pyflakes==2.1.1
 Pygments==2.3.1
+pylint==2.3.1
+pylint-django==0.11.1
+pylint-plugin-utils==0.2.6
 pyparsing==2.3.1
 python-dateutil==2.7.3
 python-magic==0.4.15
