--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -34,11 +34,12 @@ blocks:
     task:
       env_vars:
         - name: DATABASE_NAME
-          value: mysql
+          value: _newsapp_db # needed because django settings expect env variable for db name
       prologue:
         commands:
           - sem-version python 3.7
           - sem-service start mysql
+          - mysql --host=0.0.0.0 -uroot -e "create database $DATABASE_NAME"
           - checkout
           - cache restore
           - 'pip install -r ${REQUIREMENTS_FILE} --cache-dir .pip_cache'
