--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -30,7 +30,6 @@ blocks:
             - cache restore
             - 'pip download --cache-dir .pip_cache -r ${REQUIREMENTS_FILE}'
             - cache store
-
   - name: Run Unit Tests
     task:
       prologue:
@@ -47,3 +46,6 @@ blocks:
         - name: NewsApp Test
           commands:
             - python manage.py test my_newsapp.tests
+      env_vars:
+        - name: DATABASE_NAME
+          value: my_newsapp_db
