--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -49,3 +49,15 @@ blocks:
       env_vars:
         - name: DATABASE_NAME
           value: my_newsapp_db
+  - name: "Run Security Tests"
+    task:
+      # This block runs through the security checklist for the project.
+      jobs:
+        - name: Deployment Checklist
+          commands:
+           - checkout
+           - sem-version python 3.7
+           - cache restore
+           - pip install -r ${REQUIREMENTS_FILE} --cache-dir .pip_cache
+           # Test if project can be deployed securely.
+           - python manage.py check --deploy --fail-level ERROR
