--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -56,6 +56,7 @@ blocks:
           commands:
            - checkout
            - sem-version python 3.7
+           - sem-service start mysql  # as manage.py will fail if it cannot connect to mysql server
            - cache restore
            - pip install -r ${REQUIREMENTS_FILE} --cache-dir .pip_cache
            # Test if project can be deployed securely.
