--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -48,19 +48,18 @@ blocks:
         - name: NewsApp Test
           commands:
             - python manage.py test my_newsapp.tests
-  - name: "Run Security Tests"
+  - name: Run Security Tests
     task:
-      # This block runs through the security checklist for the project.
       jobs:
         - name: Deployment Checklist
           commands:
-           - checkout
-           - sem-version python 3.7
-           - sem-service start mysql  # as manage.py will fail if it cannot connect to mysql server
-           # Create an empty database.
-           # We can connect to the db with root and a blank password.
-           - mysql --host=0.0.0.0 -uroot -e "create database $DATABASE_NAME"
-           - cache restore
-           - pip install -r ${REQUIREMENTS_FILE} --cache-dir .pip_cache
-           # Test if project can be deployed securely.
-           - python manage.py check --deploy --fail-level ERROR
+            - checkout
+            - sem-version python 3.7
+            - sem-service start mysql
+            - mysql --host=0.0.0.0 -uroot -e "create database $DATABASE_NAME"
+            - cache restore
+            - 'pip install -r ${REQUIREMENTS_FILE} --cache-dir .pip_cache'
+            - python manage.py check --deploy --fail-level ERROR
+promotions:
+  - name: Deploy to staging
+    pipeline_file: deploy_staging.yml
