Update Semaphore configuration

--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -63,3 +63,5 @@ blocks:
 promotions:
   - name: Deploy to staging
     pipeline_file: deploy_staging.yml
+    auto_promote:
+      when: branch = 'master' AND result = 'passed'
