--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -32,6 +32,8 @@ blocks:
             - cache restore
             - 'pip download --cache-dir .pip_cache -r ${REQUIREMENTS_FILE}'
             - cache store
+    skip:
+      when: branch = 'master'
   - name: Run Unit Tests
     task:
       prologue:
@@ -48,6 +50,8 @@ blocks:
         - name: NewsApp Test
           commands:
             - python manage.py test my_newsapp.tests
+    skip:
+      when: branch = 'master'
   - name: Run Security Tests
     task:
       jobs:
@@ -60,6 +64,8 @@ blocks:
             - cache restore
             - 'pip install -r ${REQUIREMENTS_FILE} --cache-dir .pip_cache'
             - python manage.py check --deploy --fail-level ERROR
+    skip:
+      when: branch = 'master'
 promotions:
   - name: Deploy to staging
     pipeline_file: deploy_staging.yml
