Update update_staging.yml playbook.

--- a/.ansible/update_staging.yml
+++ b/.ansible/update_staging.yml
@@ -46,4 +46,5 @@
 
     - name: Restart app
       file:
-        state: /etc/uwsgi-emperor/vassals/{{ uwsgi_file }}
+        path: /etc/uwsgi-emperor/vassals/{{ uwsgi_file }}
+        state: touch
