--- a/.ansible/update_staging.yml
+++ b/.ansible/update_staging.yml
@@ -13,10 +13,13 @@
 
   tasks:
     - name: Update code
-      git:
-        repo: "{{ git_url }}"
-        dest: "{{ app_path }}"
-        update: yes
+      # https://stackoverflow.com/questions/41178361/how-to-use-ansible-git-module-pull-a-branch-with-local-changes
+      # https://discourse.roots.io/t/deployment-failure-due-to-local-modifications-on-production-server/5568
+      # git:
+      #   repo: "{{ git_url }}"
+      #   dest: "{{ app_path }}"
+      #   update: yes
+      command: git pull origin master
 
     - name: Update requirements
       pip:
