Update Semaphore configuration

--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -19,41 +19,14 @@ global_job_config:
     - name: DATABASE_NAME
       value: my_newsapp_db
 blocks:
-  - name: Install Dependencies
-    task:
-      prologue:
-        commands:
-          - sudo apt-get update && sudo apt-get install -y python3-dev && sudo apt-get install default-libmysqlclient-dev
-          - sem-version python 3.7
-          - checkout
-      jobs:
-        - name: pip
-          commands:
-            - 'pip install -r ${REQUIREMENTS_FILE}'
-  - name: Run Unit Tests
-    task:
-      prologue:
-        commands:
-          - sem-service start mysql
-      jobs:
-        - name: Comments Test
-          commands:
-            - python manage.py test comments.tests
-        - name: NewsApp Test
-          commands:
-            - python manage.py test my_newsapp.tests
-  - name: Run Security Tests
+  - name: Dependencies and Checks
     task:
       jobs:
-        - name: Deployment Checklist
+        - name: Dependencies and Checks
           commands:
-            - checkout
-            - sem-version python 3.7
-            - sem-service start mysql
-            - mysql --host=0.0.0.0 -uroot -e "create database $DATABASE_NAME"
-            - cache restore
-            - 'pip install -r ${REQUIREMENTS_FILE} --cache-dir .pip_cache'
-            - python manage.py check --deploy --fail-level ERROR
+            - >-
+              sem-version python 3.7 - sudo apt-get update && sudo apt-get install -y python3-dev && sudo apt-get install default-libmysqlclient-dev - sem-service start mysql - mysql --host=0.0.0.0 -uroot -e "create database $DATABASE_NAME" - checkout - cache restore - 'pip download --cache-dir .pip_cache -r ${REQUIREMENTS_FILE}' - 'pip install -r ${REQUIREMENTS_FILE} --cache-dir .pip_cache' - cache store - python manage.py test comments.tests - python manage.py test my_newsapp.tests - python
+              manage.py test my_newsapp.tests - python manage.py check --deploy --fail-level ERROR
 promotions:
   - name: Deploy to staging
     pipeline_file: deploy_staging.yml
