--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -24,9 +24,18 @@ blocks:
       jobs:
         - name: Dependencies and Checks
           commands:
-            - >-
-              sem-version python 3.7 - sudo apt-get update && sudo apt-get install -y python3-dev && sudo apt-get install default-libmysqlclient-dev - sem-service start mysql - mysql --host=0.0.0.0 -uroot -e "create database $DATABASE_NAME" - checkout - cache restore - 'pip download --cache-dir .pip_cache -r ${REQUIREMENTS_FILE}' - 'pip install -r ${REQUIREMENTS_FILE} --cache-dir .pip_cache' - cache store - python manage.py test comments.tests - python manage.py test my_newsapp.tests - python
-              manage.py test my_newsapp.tests - python manage.py check --deploy --fail-level ERROR
+            - sem-version python 3.7
+            - sudo apt-get update && sudo apt-get install -y python3-dev && sudo apt-get install default-libmysqlclient-dev
+            - checkout
+            - sem-service start mysql
+            - mysql --host=0.0.0.0 -uroot -e "create database $DATABASE_NAME"
+            - cache restore
+            - 'pip download --cache-dir .pip_cache -r ${REQUIREMENTS_FILE}'
+            - 'pip install -r ${REQUIREMENTS_FILE} --cache-dir .pip_cache'
+            - cache store
+            - python manage.py test comments.tests
+            - python manage.py test my_newsapp.tests
+            - python manage.py check --deploy --fail-level ERROR
 promotions:
   - name: Deploy to staging
     pipeline_file: deploy_staging.yml
