--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -29,7 +29,10 @@ blocks:
             - checkout
             - sem-service start mysql
             - mysql --host=0.0.0.0 -uroot -e "create database $DATABASE_NAME"
-            - 'pip install -r ${REQUIREMENTS_FILE}'
+            - cache restore
+            - 'pip download --cache-dir .pip_cache -r ${REQUIREMENTS_FILE}'
+            - cache store
+            - 'pip install -r ${REQUIREMENTS_FILE} --cache-dir .pip_cache'
             - python manage.py test comments.tests --keepdb
             - python manage.py test my_newsapp.tests --keepdb
             - python manage.py check --deploy --fail-level ERROR
